# scorpi-hv

./: .clang-format  .gitignore  README.md  build.sh  efi-kvm-smoke.yaml  meson.build  meson_options.txt  run.sh  scorpi.entitlements  win2.yaml
build-aux/: build-libwebsockets.sh
docs/: d3d12_command_transport_guidelines.md  external_gpu_renderer_plan.md  linux_kvm_port_tasks.md  sco_v1_format.md  scorpi_kit_design.md  scorpi_kit_implementation_plan.md  snapshot_detailed_design.md  snapshot_image_format_research.md  snapshot_implementation_plan.md  snapshot_prd.md  vhost_gpu_renderer_plan.md  x86_kvm_firmware_platform_tasks.md
firmware/: SCORPI_EFI.fd  SCORPI_EFI_ARM.fd  SCORPI_VARS.fd  SCORPI_VARS_ARM.fd
include/: bhyverun.h  bootrom.h  bootrom_arch.h  cnc.h  common.h  compat.h  config.h  console.h  debug.h  edid.h  external_vm_memory.h  external_vmmem.h  host_display.h  mem.h  net_backends_priv.h  pci_emul.h  pci_virtio_vhost.h  pci_xhci.h  qemu_fwcfg.h  scorpi.h  scorpi_cli.h  scorpi_x64_hwinfo.h  tpm_crb.h  tpm_platform.h  tpm_ppi.h  tpm_tis.h  uart_backend.h  uart_emul.h  usb.h  usb_cdc.h  usbdi.h  vhost_user.h  vhost_vmmem.h  virtio.h  virtio_external_backend.h  virtio_gpu.h  virtio_vhost_transport.h  vmm.h  vmmapi.h
include/amd64/: inout.h
include/arch/arm64/: armreg.h  pci_irq.h  vmm.h
include/arch/x86/: com.h  inout.h  pci_irq.h  rtc.h  vmm.h  vmm_dev.h
include/dev/ic/: ns16550.h
include/scorpi/protocol/: endian.h  vhost_user.h  virtio_external.h  virtio_gpu.h  virtio_ring.h  virtio_vhost.h
include/support/: ata.h  atomic.h  bitset.h  cpuset.h  endian.h  ethernet.h  freebsd_compat.h  linker_set.h  md5.h  tree.h
include/sys/: cdefs.h  disk.h  ioccom.h  kernel.h  queue.h
libnv/: bsd_nvpair.c  libnv.c  nv.h  nv_impl.h
libutil/: libutil.h
libyaml/: meson.build
samples/: README.md  freebsd_api.c  freebsd_vm.yaml  make_ovmf_x86_esp.sh  meson.build  ovmf_x86_vm.yaml
src/: bhyverun.c  block_if.c  bootrom.c  cnc.c  cnc_stub.c  compat.c  config.c  console.c  debug.c  edid.c  external_vm_memory.c  external_vmmem.c  host_display.c  iov.c  mem.c  mevent.c  mevent_linux.c  net_backends.c  pci_82545.c  pci_ahci.c  pci_emul.c  pci_fbuf.c  pci_hostbridge.c  pci_virtio_block.c  pci_virtio_console.c  pci_virtio_gpu.c  pci_virtio_gpu_vhost.c  pci_virtio_host.c  pci_virtio_net.c  pci_virtio_rnd.c  pci_virtio_vhost.c  pci_xhci.c  qemu_fwcfg.c  scorpi_cli.c  scorpi_crc32c.c  scorpi_crc32c.h  scorpi_host_sparse.c  scorpi_host_sparse.h  scorpi_image.c  scorpi_image.h  (+35 more)
src/arch/arm64/: bhyverun.c  bootrom_arch.c  fdt.c  fdt.h  qemu_fwcfg_arch.c  vmexit.c
src/arch/x86/: bhyverun.c  bootrom_arch.c  com.c  debugcon.c  inout.c  pci_irq.c  pci_lpc.c  pci_uart.c  qemu_fwcfg_arch.c  rtc.c  scorpi_hwinfo.c  scorpi_hwinfo.h  vmexit.c
src/libscorpi/: meson.build  scorpi.c  scorpi_internal.h
src/libvmm/common/: vmm_instruction_emul.c
src/libvmm/hvf/: internal.h  vgic.c  vmm.c  vmmapi.c
src/libvmm/kvm/: internal.h  vmmapi.c
src/libvmm/kvm/arm64/: kvm_arch.c
src/libvmm/kvm/x86/: vmm_instruction_emul.c  vmmapi.c
subprojects/: libslirp.wrap  libwebsockets.wrap
subprojects/packagefiles/libslirp/: static-glib-dependency.diff
subprojects/packagefiles/libwebsockets/: fix-meson-cmake-directory-output.diff
tests/: kvm_smoke_test.c  meson.build  mevent_linux_test.c  mevent_test_compat.c  scorpi_cli_config_parity_test.c  scorpi_config_adapter_test.c  scorpi_device_builder_test.c  scorpi_error_contract_test.c  scorpi_header_compile_test.c  scorpi_image_backend_test.c  scorpi_image_chain_resolver_test.c  scorpi_image_chain_test.c  scorpi_image_cli_test.c  scorpi_image_open_test.c  scorpi_image_qcow2_test.c  scorpi_image_raw_test.c  scorpi_image_sco_test.c  scorpi_image_uri_test.c  scorpi_parent_resolution_test.c  scorpi_sco_fixture.c  scorpi_sco_fixture.h  scorpi_sco_fixture_test.c  scorpi_vm_add_device_test.c  scorpi_vm_builder_test.c  scorpi_vm_lifecycle_test.c  scorpi_vm_normalization_test.c  scorpi_vm_validation_test.c  scorpi_yaml_api_parity_test.c  scorpi_yaml_file_cli_test.c  scorpi_yaml_loader_test.c  scorpi_yaml_normalization_rules_test.c  test_invariant_slirp_net_backend.c
util/console/: meson.build  tty.c  websock_client.c
