option(
  'hypervisor',
  type: 'combo',
  choices: ['auto', 'hvf', 'kvm'],
  value: 'auto',
  description: 'Hypervisor backend to build',
)

option(
  'cnc',
  type: 'boolean',
  value: false,
  description: 'Build the WebSocket control channel',
)

option(
  'fbuf',
  type: 'boolean',
  value: false,
  description: 'Build the bhyve framebuffer/VGA device',
)
